[project]
name = "south-sudan-climate-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "open-climate-service[server,xarray] @ git+https://github.com/dhis2/open-climate-service.git"
]

[tool.uv]
package = false
override-dependencies = [
    # openeo-pg-parser-networkx requires geojson-pydantic<2.0.0; our project uses >=2.1.0 which is compatible at runtime
    "geojson-pydantic>=2.1.0",
    # openeo-processes-dask-slim has stale constraints; all safe to override (library doesn't use these directly)
    "zarr>=3.1.6",
    "pyarrow>=19.0",
    "xarray>=2025.12.0",
    "numpy>=2.2",
    "dask>=2024.1.0",
    "dask-geopandas>=0.4",
    "geopandas>=1.1",
    "xvec>=0.3",
    "rioxarray>=0.17",
    "pystac>=1.10",
]

[tool.uv.sources]
open-climate-service = { git = "https://github.com/dhis2/open-climate-service.git", branch = "main" }
openeo-processes-dask-slim = { git = "https://github.com/dhis2/openeo-processes-dask-slim", branch = "main" }
